Fixing the conflict between popups and collapse events #40

--- a/src/frontend/src/app/home-page/chatbar/chatbar.component.css
+++ b/src/frontend/src/app/home-page/chatbar/chatbar.component.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 40px;
   background-color: #2c3649;
+  transition: 0.1s;
 }
 
 .chatbar-collapsed {
